--- a/views/ticket.html
+++ b/views/ticket.html
@@ -86,10 +86,9 @@
                 if (user) {
                     document.getElementById('user-name').innerText = `Prijavljeni korisnik: ${user.name}`;
                 } else {
-                    document.getElementById('user-name').innerText = 'Niste prijavljeni.'; // Ili neku drugu poruku
+                    document.getElementById('user-name').innerText = 'Niste prijavljeni.';
                 }
 
-                document.getElementById('user-name').innerText = `Prijavljeni korisnik: ${user.name}`;
                 document.getElementById('vatin').innerText = ticket.vatin;
                 document.getElementById('firstName').innerText = ticket.firstname;
                 document.getElementById('lastName').innerText = ticket.lastname;
